modified:   10. Recursion/Recursion vs Iteration.ipynb

--- a/10. Recursion/Recursion vs Iteration.ipynb
+++ b/10. Recursion/Recursion vs Iteration.ipynb
@@ -63,7 +63,7 @@
    "outputs": [],
    "source": [
     "// A RECURSIVE Factorial implementation   \n",
-    "static decimal RecursiveFactorial( int n )\n",
+    "static double RecursiveFactorial( int n )\n",
     "{\n",
     "\n",
     "    // Test for the base case that represents the bottom of the recursion\n",
@@ -144,19 +144,19 @@
    "outputs": [],
    "source": [
     "// An ITERATIVE implementation\n",
-    "static decimal IterativeFactorial( int n )\n",
+    "static double IterativeFactorial( int n )\n",
     "{\n",
     "\n",
-    "    // Allocate a Factorial Accumulator using the  decimal type, \n",
+    "    // Allocate a Factorial Accumulator using the  double type, \n",
     "    // which can accomodate certain larger-valued inputs without throwing errors \n",
-    "    decimal FactorialAccumulator = 1;\n",
+    "    double FactorialAccumulator = 1;\n",
     "\n",
     "\n",
     "    // Iterating For each Consecutive Integer value, starting from 1, up until n:\n",
     "    for(int ConsecutiveInteger = 1; ConsecutiveInteger <= n; ConsecutiveInteger++)\n",
     "    {\n",
     "    \n",
-    "        // multiply the  Factorial Accumulator by the current Consecutive Integer value\n",
+    "        // Multiply the  Factorial Accumulator by the current Consecutive Integer value\n",
     "        FactorialAccumulator *= ConsecutiveInteger;\n",
     "\n",
     "    }\n",
@@ -197,7 +197,7 @@
     }
    },
    "source": [
-    "Below, we clearly see that, in accounting for the difference between timestamps before and after each approach, the **Recursive** solution is actually a little more efficient in *this case*: "
+    "Below, we clearly see that, in accounting for the difference between timestamps before and after each approach, the **Iterative** solution is in fact a little more efficient in *this case*: "
    ]
   },
   {
@@ -219,8 +219,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time to process IterativeFactorial( 25 ) = 15511210043330985984000000:\n",
-      "00:00:00.0003758\r\n"
+      "Time to process IterativeFactorial( 100 ) = 9.33262154439441E+157:\n",
+      "00:00:00.0001429\r\n"
      ]
     }
    ],
@@ -229,10 +229,10 @@
     "\n",
     "DateTime BeforeFact = DateTime.Now;\n",
     "\n",
-    "decimal Fact25 = IterativeFactorial( 25 );\n",
+    "double Fact100 = IterativeFactorial( 100 );\n",
     "\n",
     "Console.WriteLine(\n",
-    "    $\"Time to process IterativeFactorial( 25 ) = { Fact25 }:\\n{ DateTime.Now - BeforeFact }\"\n",
+    "    $\"Time to process IterativeFactorial( 100 ) = { Fact100 }:\\n{ DateTime.Now - BeforeFact }\"\n",
     ")"
    ]
   },
@@ -270,8 +270,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time to process Recursivefactorial( 25 ) = 15511210043330985984000000:\n",
-      "00:00:00.0002927\r\n"
+      "Time to process Recursivefactorial( 100 ) = 9.33262154439441E+157:\n",
+      "00:00:00.0000869\r\n"
      ]
     }
    ],
@@ -280,10 +280,10 @@
     "\n",
     "DateTime BeforeFact = DateTime.Now;\n",
     "\n",
-    "decimal Fact25 = RecursiveFactorial( 25 );\n",
+    "double Fact100 = RecursiveFactorial( 100 );\n",
     "\n",
     "Console.WriteLine(\n",
-    "    $\"Time to process Recursivefactorial( 25 ) = { Fact25 }:\\n{ DateTime.Now - BeforeFact }\"\n",
+    "    $\"Time to process Recursivefactorial( 100 ) = { Fact100 }:\\n{ DateTime.Now - BeforeFact }\"\n",
     ")"
    ]
   },
@@ -424,7 +424,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken to process RecursiveFibonacci( 45 ) = 1134903170:\t00:00:06.1921370\r\n"
+      "Time taken to process RecursiveFibonacci( 45 ) = 1134903170:\t00:00:05.7995756\r\n"
      ]
     }
    ],
@@ -708,7 +708,8 @@
     }
    },
    "source": [
-    "Observe, finally, that the $0^{th}$ index is purposefully *skipped*, leaving it's value as `0` (given by default at initialization).   \n",
+    "Observe, finally, that the $0^{th}$ index is purposefully *skipped*, leaving it's value as `0` (given by default at initialization). \n",
+    "      \n",
     "This `0` value denotes a **sentinel value** which herein indicates the **bottom of the recursion**. "
    ]
   },
@@ -871,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -888,7 +889,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken to process RecursiveFibonacci( 100 ) = 3736710778780434371:\t00:00:00.0000091\r\n"
+      "Time taken to process RecursiveFibonacci( 100 ) = 3736710778780434371:\t00:00:00.0000891\r\n"
      ]
     }
    ],
@@ -897,8 +898,9 @@
     "DateTime BeforeFib = DateTime.Now;\n",
     "\n",
     "\n",
-    "// This version has an input that's twice as high, but still executes blazing fast! \n",
-    "long Fib100 = EfficientRecursiveFibonacci( 100 );\n",
+    "// This version is receiving n = 100, which is an input that's more than twice as high, \n",
+    "// but still executes super blazing fast! \n",
+    "long Fib100 = EfficientRecursiveFibonacci( n );\n",
     "\n",
     "\n",
     "// Print how long it took to execute the Efficient Recursive Fibonacci solution \n",
