modified:   10. Recursion/Recursion vs Iteration.ipynb modified:   10. Recursion/The Anatomy of Recursion.ipynb

--- a/10. Recursion/Recursion vs Iteration.ipynb
+++ b/10. Recursion/Recursion vs Iteration.ipynb
@@ -937,6 +937,186 @@
     }
    },
    "source": [
+    "#### Iterative"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "It is not hard to notice that we can solve the problem *without* using recursion, by calculating the **Fibonacci** numbers **consecutively**. \n",
+    "   \n",
+    "For this purpose we are going to keep only the last two calculated elements of the sequence and use them to get the next element. \n",
+    "  \n",
+    "Below you can see an implementation of the **Iterative** Fibonacci numbers calculation algorithm:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "static long IterativeFibonacci( int n )\n",
+    "{\n",
+    "\n",
+    "    // Declare a Fibonacci Accumulator\n",
+    "    long FibonacciAccumulator = 0;\n",
+    "\n",
+    "\n",
+    "    // Set up a couple of 'pointers'\n",
+    "    // initialized at F(n - 1) = 1  and F(n - 2) = 1, respectively,\n",
+    "    // consistent with the recursive definition\n",
+    "    long Fibonacci_Of_N_Minus_1 = 1,\n",
+    "         Fibonacci_Of_N_Minus_2 = 1;\n",
+    "\n",
+    "\n",
+    "    // Iterating For every Consecutive Integer from 2, \n",
+    "    // up until, but not including, n\n",
+    "    for( int ConsecutiveInteger = 0; ConsecutiveInteger < n; ConsecutiveInteger++ )\n",
+    "    {\n",
+    "\n",
+    "        // Derive the next sub-component of the Fibonacci Accumulator\n",
+    "        // by adding the two previous values which came before,\n",
+    "        // again, consistent with the recursive definition\n",
+    "        FibonacciAccumulator = Fibonacci_Of_N_Minus_1 + Fibonacci_Of_N_Minus_2;\n",
+    "\n",
+    "\n",
+    "        // Advance the Fibonacci_Of_N_Minus_2 pointer \n",
+    "        // to where the Fibonacci_Of_N_Minus_1 pointer currently is\n",
+    "        Fibonacci_Of_N_Minus_2 = Fibonacci_Of_N_Minus_1;\n",
+    "\n",
+    "\n",
+    "        // Advance the Fibonacci_Of_N_Minus_1 pointer\n",
+    "        // to where the Fibonacci Accumulator currently is\n",
+    "        Fibonacci_Of_N_Minus_1 = FibonacciAccumulator;\n",
+    "\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "    // After all that, the Fibonacci Accumulator now stores\n",
+    "    // the appropriate Fibonacci number corresponding to the \n",
+    "    // given input, n\n",
+    "    return FibonacciAccumulator; \n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Once more, we see that the **Iterative Solution**, in *this case*, presents the fastest execution speed,  \n",
+    "but provides only a marginal improvement over the *Efficient Recursive* solution:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time taken to process IterativeFibonacci( 100 ) = 5035488507601418376:\t00:00:00.0000711\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Observe the current time Before the call to Fibonacci\n",
+    "DateTime BeforeFib = DateTime.Now;\n",
+    "\n",
+    "\n",
+    "// This version is receiving n = 100, which is an input that's more than twice as high, \n",
+    "// but still executes super blazing fast! \n",
+    "long Fib100 = IterativeFibonacci( n );\n",
+    "\n",
+    "\n",
+    "// Print how long it took to execute the Efficient Recursive Fibonacci solution \n",
+    "Console.WriteLine(\n",
+    "    $\"Time taken to process IterativeFibonacci( 100 ) = { Fib100 }:\\t{ DateTime.Now - BeforeFib }\"\n",
+    ");"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
     "### Which is Better: Recursion or Iteration?"
    ]
   },
