--- a/10. Recursion/The Anatomy of Recursion.ipynb
+++ b/10. Recursion/The Anatomy of Recursion.ipynb
@@ -262,7 +262,7 @@
     "\n",
     "// Not only does this size n take a reeeeally long time to compute (approx. 5 - 7 seconds), \n",
     "// each consecutive input larger than this will be exponentially slower!\n",
-    "long Fib45 = InefficientRecursiveFibonacci( 45 );\n",
+    "long Fib45 = Fibonacci( 45 );\n",
     "\n",
     "\n",
     "// Print how long it took to execute the Inefficient Recursive Fibonacci solution \n",
