modified:   10. Recursion/Recursion vs Iteration.ipynb modified:   10. Recursion/The Anatomy of Recursion.ipynb

--- a/10. Recursion/Recursion vs Iteration.ipynb
+++ b/10. Recursion/Recursion vs Iteration.ipynb
@@ -1117,7 +1117,278 @@
     }
    },
    "source": [
+    "### Choosing a Recursive or Iterative Approach based on Problem Requirements"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Linear Computational Processes"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Generally, when we have a **linear computational process**, we *do not* have to use **recursion**,   \n",
+    "because **iteration** can be constructed easily and leads to simple and efficient calculations.    \n",
+    "   \n",
+    "An example of **linear computational process** is the calculation of **factorial**.     \n",
+    "In it, we calculate the elements of the sequence in which every *next element* depends only on the *previous ones*.   \n",
+    "   \n",
+    "What is distinctive about the **linear computational processes** is that on each step of the calculating recursion is called only *once*, only in *one direction*.   "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Schematically, a **linear computational process** we can describe as follows:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "```c#\n",
+    "[access_modifier]  return_type  RecursiveMethodName( [parameters_list] )\n",
+    "{\n",
+    "    // do some stuff...\n",
+    "    \n",
+    "    RecursiveMethodName( SomeArgument );\n",
+    "    \n",
+    "    // do some other stuff...\n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "In such a process, when we have **only one recursive call** in the body of the Method, it is *not necessary* to use **recursion**, because the **iteration** is obvious."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Tree-Like (Branched) Computational Processes"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "In **tree-like (branched) computational processes** on each step of the **recursion**, *multiple* recursive calls are made, and the scheme of calculations, could be visualized as a *tree* (and not as a list like in linear calculations)."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Schematically, a **tree-like (branched) computational processes** we can describe as follows:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "```c#\n",
+    "[access_modifier]  return_type  RecursiveMethodName( [parameters_list] )\n",
+    "{  \n",
+    "    if( SomeStuff )\n",
+    "    {\n",
+    "        return RecursiveMethodName( SomeArgument );\n",
+    "    }\n",
+    "     \n",
+    "    else if( SomeOtherStuff )\n",
+    "    {\n",
+    "        return RecursiveMethodName( SomeOtherArgument );\n",
+    "    }  \n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
     "### Which is Better: Recursion or Iteration?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### The Basic Rule of Thumb\n",
+    "\n",
+    "- For **branched recursive calculations**, use **recursion** (and ensure each value is calculated only once). \n",
+    "- For **linear recursive calculations** use **iteration**.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Important Considerations"
    ]
   },
   {
@@ -1150,7 +1421,9 @@
     "    \n",
     "While **recursion** is powerful programming technique, we have to think carefully before using it, because if used incorrectly, it can lead to inefficient and tough to understand and maintain solutions. \n",
     "   \n",
-    "As such, If by using **recursion** we reach a simpler, shorter and easier for understanding solution, without causing inefficiency and other side effects, then we can prefer **recursive** solution. Otherwise, it is better to consider the **iterative** approach."
+    "As such, If by using **recursion** we reach a simpler, shorter and easier for understanding solution, without causing inefficiency and other side effects, then we can prefer **recursive** solution.   \n",
+    "\n",
+    "Otherwise, it is better to consider the **iterative** approach."
    ]
   }
  ],
@@ -1167,6 +1440,29 @@
      {
       "aliases": [],
       "name": "csharp"
+     },
+     {
+      "aliases": [
+       "js"
+      ],
+      "languageName": "JavaScript",
+      "name": "javascript"
+     },
+     {
+      "aliases": [],
+      "name": "webview"
+     },
+     {
+      "aliases": [],
+      "languageName": null,
+      "name": ".NET"
+     },
+     {
+      "aliases": [
+       "frontend"
+      ],
+      "languageName": null,
+      "name": "vscode"
      }
     ]
    }
