modified:   09. Methods/Invocation/An Overview.ipynb renamed:    _img/Invocation Control Order.jpg -> 09. Methods/_img/Invocation Control Order.jpg

--- a/09. Methods/Invocation/An Overview.ipynb
+++ b/09. Methods/Invocation/An Overview.ipynb
@@ -358,7 +358,7 @@
     }
    },
    "source": [
-    "![ufukkedup](../../_img/Invocation%20Control%20Order.jpg)"
+    "![ufukkedup](../_img/Invocation%20Control%20Order.jpg)"
    ]
   },
   {
