modified:   07. Arrays/MultiDimensional.ipynb modified:   10. Recursion/Searching for Paths in a Labyrinth.ipynb

--- a/10. Recursion/Searching for Paths in a Labyrinth.ipynb
+++ b/10. Recursion/Searching for Paths in a Labyrinth.ipynb
@@ -71,6 +71,126 @@
     }
    },
    "source": [
+    "To translate this concept into C# terms, we are going to use a **two-dimensional** `Array` of **characters**. In it we are going to mark with the character `' '` (**space**) the *passable* positions, with `e` the **end** from the labyrinth and with `*` the *impassable* positions. \n",
+    "   \n",
+    "The **starting position** is marked as *passable* position.    \n",
+    "The positions we have *already visited* we are going to mark with the character `v`. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public class SearchForPathsInALabrynth\n",
+    "{\n",
+    "    // A 2 Dimensional Character Array representation of the Labryinth defined above\n",
+    "    public static char[ , ] Labryinth =\n",
+    "    {\n",
+    "        {'_','_','_','*','_','_','_'},\n",
+    "        {'*','*','_','*','_','*','_'},\n",
+    "        {'_','_','_','_','_','_','_'},\n",
+    "        {'_','*','*','*','*','*','_'},\n",
+    "        {'_','_','_','_','_','_','e'},\n",
+    "    };\n",
+    "\n",
+    "    public static void DisplayLabrynth()\n",
+    "    {\n",
+    "        // Observe the First Row and Last Row Indices of the array,\n",
+    "        // along with the First Column and Last Column Indices of the array\n",
+    "        int FirstRowIndex = 0,\n",
+    "            FirstColIndex = 0,\n",
+    "            LastRowIndex  = Labryinth.GetLength( 0 ) - 1,\n",
+    "            LastColIndex  = Labryinth.GetLength( 1 ) - 1;\n",
+    "\n",
+    "\n",
+    "        // Iterating For each of the elements from the First Row Index of the array \n",
+    "        // up until the Last Row Index:\n",
+    "        for( int CurrentRowIndex = FirstRowIndex; CurrentRowIndex <= LastRowIndex; CurrentRowIndex++ )\n",
+    "        {\n",
+    "\n",
+    "            // Iterating For each of the elements from the First Column Index of the array \n",
+    "            // up until the Last Column Index:\n",
+    "            for( int CurrentColIndex = FirstColIndex; CurrentColIndex <= LastColIndex; CurrentColIndex++ )\n",
+    "            {\n",
+    "\n",
+    "                // Print the Value at the Current Col Index\n",
+    "                Console.Write(\n",
+    "                    \"{0,-3}\", \n",
+    "                    $\"{ Labryinth[ CurrentRowIndex ,  CurrentColIndex] } \"\n",
+    "                );\n",
+    "\n",
+    "            }\n",
+    "\n",
+    "            // After all that,\n",
+    "            // each of the Column Values of the Current Row have been printed,\n",
+    "            // so we now move on to the next line\n",
+    "            Console.WriteLine();\n",
+    "\n",
+    "        }\n",
+    "\n",
+    "        // After All that,\n",
+    "        // All Column Values have now been printed for every Row in the Array,\n",
+    "        // as required\n",
+    "    }\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_  _  _  *  _  _  _  \n",
+      "*  *  _  *  _  *  _  \n",
+      "_  _  _  _  _  _  _  \n",
+      "_  *  *  *  *  *  _  \n",
+      "_  _  _  _  _  _  e  \n"
+     ]
+    }
+   ],
+   "source": [
+    "SearchForPathsInALabrynth.DisplayLabrynth();"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
     "<br>"
    ]
   },
@@ -178,7 +298,7 @@
     }
    },
    "source": [
-    "We can consider searching *from* a given position in the labyrinth (including , but not limited to, the **start**), *to* the **end** of the labyrinth, as a **recursive** process for the following reasons: \n",
+    "We can consider searching *from* a given position in the labyrinth (including , but not limited to, the **start**), *to* the **end** of the labyrinth, as a **recursive** process: \n",
     "- Let the **current position** in the labyrinth be `(row, col)`. In the beginning we go from the **start** position `(0, 0)`.\n",
     "- If the **current position** is the *searched position* `(N-1, M-1)`, then we have found a path and we should print it.\n",
     "- If the **current position** is *impassable*, we go back (we have no right to step on it).\n",
@@ -188,6 +308,67 @@
     "  - We try $up: \\qquad\\,\\,\\,\\,\\,\\,\\,$    position `(row - 1, col)`\n",
     "  - We try $right: \\qquad$ position `(row, col + 1)`\n",
     "  - We try $down: \\qquad$  position `(row + 1, col)`"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Saving the Paths"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "In order to print the paths found by our recursive algorithm, we can use an `Array` to store every step we take using the following **characters**: \n",
+    "- `L` – left, \n",
+    "- `U` – up, \n",
+    "- `R` – right, \n",
+    "- `D` – down\n",
+    "    \n",
+    "This `Array` will store each sequence of steps along the current path from the start of the labyrinth, up until to the current position.    \n",
+    "   \n",
+    "We are going to need an `Array` of type `char` and an *counter* to count the steps we have taken. The counter will keep track of how many times we have moved to the next position recursively, i.e. the current **depth** of recursion. \n",
+    "   \n",
+    "In order to work correctly, our program has to *increment the counter* when entering recursion, and *store the direction* we have taken to get to the current position in the `Array`. \n",
+    "   \n",
+    "When returning from a recursion, the counter should be *reduced by 1*. \n",
+    "   \n",
+    "When an exit is found, the path, consisting of all the characters in the `Array` from 0 to the current position) should be printed. \n",
+    "   \n",
+    "What should be the size of the `Array`? The answer to this question is easy; since we can enter one cell at most once, than the path would never be longer than the count of all cells (N*M). In our case the size of the maze is 7*5, i.e. the size of the `Array` has to be 35."
    ]
   }
  ],
