modified:   10. Recursion/Searching for Paths in a Labyrinth.ipynb

--- a/10. Recursion/Searching for Paths in a Labyrinth.ipynb
+++ b/10. Recursion/Searching for Paths in a Labyrinth.ipynb
@@ -360,15 +360,50 @@
     "    \n",
     "This `Array` will store each sequence of steps along the current path from the start of the labyrinth, up until to the current position.    \n",
     "   \n",
-    "We are going to need an `Array` of type `char` and an *counter* to count the steps we have taken. The counter will keep track of how many times we have moved to the next position recursively, i.e. the current **depth** of recursion. \n",
+    "We are going to need an `Array` of type `char` and an *counter* to count the steps we have taken. \n",
+    "   \n",
+    "The counter will keep track of how many times we have moved to the next position recursively, i.e. the current **depth** of recursion. \n",
     "   \n",
     "In order to work correctly, our program has to *increment the counter* when entering recursion, and *store the direction* we have taken to get to the current position in the `Array`. \n",
     "   \n",
     "When returning from a recursion, the counter should be *reduced by 1*. \n",
     "   \n",
-    "When an exit is found, the path, consisting of all the characters in the `Array` from 0 to the current position) should be printed. \n",
+    "When an exit is found, the *path*, consisting of *all the characters* in the `Array` from 0 to the current position) should be printed. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
     "   \n",
-    "What should be the size of the `Array`? The answer to this question is easy; since we can enter one cell at most once, than the path would never be longer than the count of all cells (N*M). In our case the size of the maze is 7*5, i.e. the size of the `Array` has to be 35."
+    "##### What should be the **size** of the `Array`?   \n",
+    "    \n",
+    "The answer to this question is easy; since we can enter one cell at most once, than the path would never be longer than the count of all cells $N \\times M$.    \n",
+    "\n",
+    "In our case the **size** of the maze is $7 \\times 5$, i.e. the **size** of the `Array` has to be `35`."
    ]
   }
  ],
