--- a/10. Recursion/Recursion vs Iteration.ipynb
+++ b/10. Recursion/Recursion vs Iteration.ipynb
@@ -1443,12 +1443,14 @@
      },
      {
       "aliases": [],
+      "languageName": null,
       "name": ".NET"
      },
      {
       "aliases": [
        "frontend"
       ],
+      "languageName": null,
       "name": "vscode"
      },
      {
