modified:   10. Recursion/Searching for Paths in a Labyrinth.ipynb

--- a/10. Recursion/Searching for Paths in a Labyrinth.ipynb
+++ b/10. Recursion/Searching for Paths in a Labyrinth.ipynb
@@ -107,20 +107,20 @@
     "\n",
     "    public static void DisplayLabrynth()\n",
     "    {\n",
-    "        // Observe the First Row and Last Row Indices of the array,\n",
-    "        // along with the First Column and Last Column Indices of the array\n",
+    "        // Observe the First Row and Last Row Indices of the Labryinth,\n",
+    "        // along with the First Column and Last Column Indices of the Labryinth\n",
     "        int FirstRowIndex = 0,\n",
     "            FirstColIndex = 0,\n",
     "            LastRowIndex  = Labryinth.GetLength( 0 ) - 1,\n",
     "            LastColIndex  = Labryinth.GetLength( 1 ) - 1;\n",
     "\n",
     "\n",
-    "        // Iterating For each of the elements from the First Row Index of the array \n",
+    "        // Iterating For each of the elements from the First Row Index of the Labryinth \n",
     "        // up until the Last Row Index:\n",
     "        for( int CurrentRowIndex = FirstRowIndex; CurrentRowIndex <= LastRowIndex; CurrentRowIndex++ )\n",
     "        {\n",
     "\n",
-    "            // Iterating For each of the elements from the First Column Index of the array \n",
+    "            // Iterating For each of the elements from the First Column Index of the Labryinth \n",
     "            // up until the Last Column Index:\n",
     "            for( int CurrentColIndex = FirstColIndex; CurrentColIndex <= LastColIndex; CurrentColIndex++ )\n",
     "            {\n",
