modified:   10. Recursion/Searching for Paths in a Labyrinth.ipynb

--- a/10. Recursion/Searching for Paths in a Labyrinth.ipynb
+++ b/10. Recursion/Searching for Paths in a Labyrinth.ipynb
@@ -401,7 +401,7 @@
     "   \n",
     "##### What should be the **size** of the `Array`?   \n",
     "    \n",
-    "The answer to this question is easy; since we can enter one cell at most once, than the path would never be longer than the count of all cells $N \\times M$.    \n",
+    "The answer to this question is easy; since we can enter each \"square\" at most once, then the path can never be longer than the *count of all squares* $N \\times M$.    \n",
     "\n",
     "In our case the **size** of the maze is $7 \\times 5$, i.e. the **size** of the `Array` has to be `35`."
    ]
