modified:   10. Recursion/Searching for Paths in a Labyrinth.ipynb

--- a/10. Recursion/Searching for Paths in a Labyrinth.ipynb
+++ b/10. Recursion/Searching for Paths in a Labyrinth.ipynb
@@ -71,7 +71,7 @@
     }
    },
    "source": [
-    "To translate this concept into C# terms, we are going to use a **two-dimensional** `Array` of **characters**. In it we are going to mark with the character `' '` (**space**) the *passable* positions, with `e` the **end** from the labyrinth and with `*` the *impassable* positions. \n",
+    "To translate this concept into C# terms, we are going to use a **two-dimensional** `Array` of **characters**. In it we are going to mark with the character `'_'` (**underscore**) the *passable* positions, with `e` the **end** from the labyrinth and with `*` the *impassable* positions. \n",
     "   \n",
     "The **starting position** is marked as *passable* position.    \n",
     "The positions we have *already visited* we are going to mark with the character `v`. "
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -95,6 +95,7 @@
    "source": [
     "public class SearchForPathsInALabrynth\n",
     "{\n",
+    "\n",
     "    // A 2 Dimensional Character Array representation of the Labryinth defined above\n",
     "    public static char[ , ] Labryinth =\n",
     "    {\n",
@@ -105,6 +106,9 @@
     "        {'_','_','_','_','_','_','e'},\n",
     "    };\n",
     "\n",
+    "\n",
+    "    // A helper method which prints out the 2D char array representation\n",
+    "    // of the Labryinth\n",
     "    public static void DisplayLabrynth()\n",
     "    {\n",
     "        // Observe the First Row and Last Row Indices of the Labryinth,\n",
@@ -150,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -418,72 +422,8 @@
     "defaultKernelName": "csharp",
     "items": [
      {
-      "aliases": [
-       "c#",
-       "C#"
-      ],
-      "languageName": "C#",
+      "aliases": [],
       "name": "csharp"
-     },
-     {
-      "aliases": [
-       "frontend"
-      ],
-      "name": "vscode"
-     },
-     {
-      "aliases": [],
-      "name": ".NET"
-     },
-     {
-      "aliases": [
-       "f#",
-       "F#"
-      ],
-      "languageName": "F#",
-      "name": "fsharp"
-     },
-     {
-      "aliases": [],
-      "languageName": "HTML",
-      "name": "html"
-     },
-     {
-      "aliases": [
-       "js"
-      ],
-      "languageName": "JavaScript",
-      "name": "javascript"
-     },
-     {
-      "aliases": [],
-      "languageName": "KQL",
-      "name": "kql"
-     },
-     {
-      "aliases": [],
-      "languageName": "Mermaid",
-      "name": "mermaid"
-     },
-     {
-      "aliases": [
-       "powershell"
-      ],
-      "languageName": "PowerShell",
-      "name": "pwsh"
-     },
-     {
-      "aliases": [],
-      "languageName": "SQL",
-      "name": "sql"
-     },
-     {
-      "aliases": [],
-      "name": "value"
-     },
-     {
-      "aliases": [],
-      "name": "webview"
      }
     ]
    }
