modified:   10. Recursion/Searching for Paths in a Labyrinth.ipynb

--- a/10. Recursion/Searching for Paths in a Labyrinth.ipynb
+++ b/10. Recursion/Searching for Paths in a Labyrinth.ipynb
@@ -71,7 +71,9 @@
     }
    },
    "source": [
-    "To translate this concept into C# terms, we are going to use a **two-dimensional** `Array` of **characters**. In it we are going to mark with the character `'_'` (**underscore**) the *passable* positions, with `e` the **end** from the labyrinth and with `*` the *impassable* positions. \n",
+    "To translate this concept into C# terms, we are going to use a **two-dimensional** `Array` of **characters**.    \n",
+    "   \n",
+    "In it we are going to mark with the character `'_'` (**underscore**) the *passable* positions, with `e` the **end** from the labyrinth and with `*` the *impassable* positions. \n",
     "   \n",
     "The **starting position** is marked as *passable* position.    \n",
     "The positions we have *already visited* we are going to mark with the character `v`. "
