modified:   10. Recursion/Searching for Paths in a Labyrinth.ipynb

--- a/10. Recursion/Searching for Paths in a Labyrinth.ipynb
+++ b/10. Recursion/Searching for Paths in a Labyrinth.ipynb
@@ -51,7 +51,7 @@
     "An adventurer enters the labyrinth from its *top left corner* (the **start**) and has to **reach the bottom right corner** of the labyrinth (the **end**).    \n",
     "\n",
     "\n",
-    "<img src=\"_img/LabryinthOverview.jpg\" style=\"display: block; margin: auto\"></img>\n",
+    "<img src=\"_img/LabryinthOverview.jpg\" style=\"display: block; margin: auto; width: 400px;\"></img>\n",
     "\n",
     "   \n",
     "At each turn, the adventurer can move $\\text{one position}$ $up$, $down$, $left$, or $right$, but may not go outside the boundaries of the labyrinth, or step on an impassable \"square\". \n",
@@ -73,10 +73,7 @@
    "source": [
     "To translate this concept into C# terms, we are going to use a **two-dimensional** `Array` of **characters**.    \n",
     "   \n",
-    "In it we are going to mark with the character `'_'` (**underscore**) the *passable* positions, with `e` the **end** from the labyrinth and with `*` the *impassable* positions. \n",
-    "   \n",
-    "The **starting position** is marked as *passable* position.    \n",
-    "The positions we have *already visited* we are going to mark with the character `v`. "
+    "In it we are going to mark with the character `'_'` (**underscore**) the *passable* positions, with `e` the **end** from the labyrinth and with `*` the *impassable* positions. The **starting position** is marked as *passable* position.    "
    ]
   },
   {
